# XJTUToolBox

./: .gitignore  README.md  XJTUToolBox.pro  app.py  build.py  console_logger.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_osx.txt  updater.py  upload_empty_room.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  build_linux.yml  build_macos.yml  build_windows.yml  deploy.yml  empty_room.yml  update_aur.yml  upload.yml
app/: AccountInterface.py  AttendanceInterface.py  HomeInterface.py  LMSInterface.py  ScheduleInterface.py  ScoreInterface.py  SettingInterface.py  ToolBoxInterface.py  TrayInterface.py  main_window.py
app/cards/: copyable_switch_card.py  course_card.py  custom_color_setting_card.py  custom_switch_card.py  link_card.py  lms_activity_card.py  pure_lesson_card.py  scheduled_notice_card.py  tool_card.py
app/components/: CardManagerDialog.py  ConfirmBox.py  CustomMessageBox.py  MultiSelectionComboBox.py  NoticeCard.py  NoticeRuleCard.py  NoticeSourceCard.py  ProgressInfoBar.py  RuleLine.py  ScheduleTable.py
app/sessions/: attendance_session.py  common_session.py  ehall_session.py  gmis_session.py  gste_session.py  js_session.py  jwapp_session.py  jwxt_session.py  lms_session.py  session_backend.py
app/sub_interfaces/: AutoJudgeInterface.py  AvatarDialog.py  ChangeTermDialog.py  EmptyRoomInterface.py  EncryptDialog.py  ExportCalendarDialog.py  GraduateJudgeOptionInterface.py  JudgeAllOptionInterface.py  JudgeOptionInterface.py  LMSInterface.py  LessonConflictDialog.py  LessonDetailDialog.py  LoginInterface.py  NoticeChoiceInterface.py  NoticeInterface.py  NoticeRuleInterface.py  NoticeSettingInterface.py  QRCodeLoginDialog.py  ResetVisitorIdDialog.py  RuleSetInterface.py  ScoreDetailDialog.py  TermStartTimeDialog.py  VerifyCodeDialog.py  WebVPNConvertInterface.py  __init__.py
app/sub_interfaces/lms/: __init__.py  activity_page.py  batch_download_dialog.py  common.py  course_page.py  detail_page.py  image_preview_dialog.py  start_page.py  submission_page.py  video_page.py
app/threads/: AttendanceFlowThread.py  CFEmptyRoomThread.py  DownloadUpdateThread.py  EmptyRoomThread.py  ExamScheduleThread.py  GraduateJudgeThread.py  GraduateScheduleThread.py  GraduateScoreThread.py  HolidayThread.py  JudgeThread.py  LMSBatchDownloadThread.py  LMSFileDownloadThread.py  LMSThread.py  LoginThreads.py  NoticeThread.py  ProcessWidget.py  ScheduleAttendanceMonitorThread.py  ScheduleAttendanceThread.py  ScheduleThread.py  ScoreThread.py  SessionKeepAliveThread.py  UpdateThread.py
app/utils/: __init__.py  account.py  auto_start.py  cache.py  config.py  fastest_mirror.py  icons.py  interactive_login.py  linux_compat.py  log.py  mfa.py  migrate_data.py  notification.py  qrcode_login.py  qt_mfa.py  qt_qrcode_login.py  session_manager.py  session_persistence.py  single_app.py  style_sheet.py
assets/: version.txt
assets/i18n/: XJTUToolBox.en_US.qm  XJTUToolBox.en_US.ts
assets/qss/dark/: auto_judge_interface.qss  home_interface.qss  judge_option_interface.qss  link_card.qss  login_interface.qss  notice_interface.qss  setting_interface.qss  tool_card.qss  toolbox_interface.qss
assets/qss/light/: account_interface.qss  attendance_interface.qss  empty_room_interface.qss  link_card.qss  lms_interface.qss  login_interface.qss  notice_setting_interface.qss  schedule_interface.qss  score_interface.qss  setting_interface.qss  tool_card.qss  toolbox_interface.qss  webvpn_convert_interface.qss
attendance/: __init__.py  attendance.py
aur/xjtutoolbox/: PKGBUILD
aur/xjtutoolbox-bin/: PKGBUILD
aur/xjtutoolbox-git/: PKGBUILD
auth/: __init__.py  constant.py  login.py  new_login.py  new_qrcode_login.py  util.py
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/development/: attendance.md  auth.md  docs-site.md  gmis.md  interface.md  introduction.md  jwapp.md  jwxt.md  notification.md  session.md  setup.md  thread.md  ywtb.md
docs/tutorial/: account.md  attendance.md  empty-room.md  faq.md  judge.md  notice.md  quick-start.md  schedule.md  scheduled-event.md  score.md  setting.md
ehall/: __init__.py  empty_room.py  judge.py  questionnaire_template.py  schedule.py  score.py  util.py
ehall/templates/: experiment-60.json  experiment-80.json  general-100.json  general-40.json  general-60.json  general-80.json  ideology-100.json  ideology-40.json  ideology-80.json  physical-100.json  project-100.json  project-40.json  project-60.json
gmis/: __init__.py  lesson_detail.py  schedule.py  schedule_parser.py  score.py
gste/: __init__.py  judge.py
jwapp/: __init__.py  score.py  util.py
jwxt/: __init__.py  empty_room.py  judge.py  questionnaire_template.py  schedule.py  score.py  util.py
jwxt/templates/: experiment-100.json  experiment-40.json  ideology-60.json  physical-40.json  physical-60.json  physical-80.json  project-80.json  theory-100.json  theory-40.json  theory-60.json  theory-80.json
lms/: EXPOSED_APIS.md  __init__.py  lms.md  lms.py  models.py
notification/: __init__.py  filter.py  notification.py  notification_manager.py  ruleset.py  source.py
notification/crawlers/: __init__.py  crawler.py  gs.py  jwc.py  se.py
schedule/: __init__.py  database_description.md  holiday.py  lesson.py  schedule.py  schedule_database.py  schedule_service.py  xjtu_time.py
test/auth/: login.py  test_qrcode_login.py  util.py
test/schedule/: test_lesson.py  test_schedule.py
test/sessions/: session_manager.py
ywtb/: __init__.py  util.py
